--- a/README.Rmd
+++ b/README.Rmd
@@ -11,12 +11,12 @@ knitr::opts_chunk$set(
 )
 ```
 
-# A template R workflow for general data analysis
+# Data for Decision Makers Project Workflow
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-This repository is a template for a [`docker`](https://www.docker.com/get-started)-containerised, [`{targets}`](https://docs.ropensci.org/targets/)-based, [`{renv}`](https://rstudio.github.io/renv/articles/renv.html)-enabled [`R`](https://cran.r-project.org/) workflow for general data analysis.
+This repository is a template for a [`docker`](https://www.docker.com/get-started)-containerised, [`{targets}`](https://docs.ropensci.org/targets/)-based, [`{renv}`](https://rstudio.github.io/renv/articles/renv.html)-enabled [`R`](https://cran.r-project.org/) workflow for the Data for Decision Makers (D4DM) project.
 
 ## About the Project
 
@@ -27,7 +27,7 @@ This repository is a template for a [`docker`](https://www.docker.com/get-starte
 The project repository is structured as follows:
 
 ```
-sc-policy-review
+d4dm-management
     |-- .github/
     |-- data/
     |-- data-raw/
